# daydream-workflow-harness

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md
src/daydream_workflow_harness/: __init__.py  author.py  benchmark.py  catalog.py  cli.py  compatibility.py  compiler.py  equivalence.py  evaluate.py  extract_scope.py  ir.py  planner.py  reconstruct.py  repair.py  reporting.py  runtime.py  schemas.py  source_proof.py  templates.py  validator.py  weave.py
tests/: test_author.py  test_benchmark.py  test_catalog.py  test_cli.py  test_compatibility.py  test_compiler.py  test_equivalence.py  test_evaluate.py  test_planner.py  test_reconstruct.py  test_repair.py  test_reporting.py  test_runtime.py  test_source_proof.py  test_templates.py  test_validator.py  test_weave.py
tests/fixtures/: blind_regeneration_public_cases.json  graph_transparent.json  stage_chain_cyborgtd.json
