[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daydream-workflow-harness"
version = "0.1.0"
description = "Workflow authoring harness for Daydream Scope"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "DeFine" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/its-DeFine/daydream-workflow-harness"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
daydream-workflow-harness = "daydream_workflow_harness.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
